# questionnaire

./: .gitignore  README.md  test.txt  Вопросы_Зунга_проба1 .txt  Вопросы_ТОБОЛ.txt  Список_вопросов_Зунга.docx  Файл_эксель_05.07.2024.xlsx
docs/arch/: database.drawio  security.drawio  single_test_fsm.drawio
docs/concept/: README.txt
docs/notes/: links.txt
drafts/: Answer.cpp  Answer.h  Methodology.cpp  Methodology.h  Question.cpp  Question.h  Questions  SingleTest.cpp  SingleTest.h  Test_file_data_format.txt  TestsSession.cpp  a.out  build.sh  main.cpp
drafts/crypto/: CMakeLists.txt  TODO.txt  crypto.cpp  crypto.h  database.cpp  database.h  database_structure.cpp  key_derivation_example.txt.txt  main.cpp  utils.h  widget.cpp  widget.h
drafts/crypto/chacha20/: CMakeLists.txt  README.txt  chacha20.c  chacha20.h
drafts/crypto/chacha20/chacha20_tests/: tests.h
drafts/crypto/chacha20/chacha20_tests/rfc/: test.c  test.h
drafts/crypto/crypto/: crypto.cpp  crypto.h  keystream.cpp
drafts/crypto/database/: database.cpp  database.h  database_structure.cpp
drafts/crypto/libsodium-win64/: README.txt
drafts/fsm/src/: Answer.cpp  Client.cpp  Client.h  Question.cpp
drafts/fsm/src/Fsm/: Fsm.cpp
drafts/fsm/src/MethodicsLoader/: MethodicsLoader.h
drafts/fsm/src/MethodicsLoader/methodics/beka/: Beka.cpp  Beka.h
drafts/fsm/src/MethodicsLoader/methodics/hanin/: Hanin.cpp  Hanin.h
drafts/fsm/src/MethodicsLoader/methodics/mmpi/: Mmpi.cpp
drafts/fsm/src/MethodicsLoader/methodics/zung/: Zung.cpp  Zung.h
drafts/fsm/tmp/: _Test_file_data_format.txt
drafts/methodics/: Methodics.h  Methodology.cpp  Methodology.h
drafts/methodics/beka/: Beka.cpp  Beka.h
drafts/methodics/zung/: Zung.cpp  Zung.h
drafts/methodics_loader/methodics/: Methodology.cpp  Methodology.h
drafts/methodics_loader/methodics/mmpi/: Mmpi.h
drafts/methodics_loader/methodics/tobol/: Tobol.cpp
drafts/src/: Exception.cpp  Exception.h  SingleTest.cpp  SingleTest.h  TestsSession.h
drafts/src/MethodicsLoader/: MethodicsLoader.cpp
drafts/src/MethodicsLoader/methodics/: Methodology.h
drafts/src/MethodicsLoader/methodics/scl/: Scl.cpp  Scl.h
drafts/src/MethodicsLoader/methodics/tobol/: Tobol.h
drafts/utils/: get_methodics_hash.py
pptx/: ПРОЕКТ-новый пациент.pptx  ПРОЕКТ-общий визуал.pptx  ПРОЕКТ.pptx  Шкала сниженного настроения Цунга (Зунга).pptx
src/: CMakeLists.txt
src/Durka/: CMakeLists.txt  FocusDisabler.qml  main.qml  qml.qrc
src/Hello_world/: CMakeLists.txt  main.qml
