SET (CHACHA20_SRCS chacha20.c chacha20.h)
SET (CHACHA20_TEST
        chacha20_tests/rfc/test.c chacha20_tests/rfc/test.h
        # performance tests are required
)

ADD_LIBRARY(chacha20 STATIC ${CHACHA20_SRCS} ${CHACHA20_TEST})
TARGET_INCLUDE_DIRECTORIES(chacha20 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

SET_TARGET_PROPERTIES(chacha20 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
